Ajout visualisation du vent

--- a/MeteoSkyWP/MeteoSkyWP.csproj
+++ b/MeteoSkyWP/MeteoSkyWP.csproj
@@ -166,6 +166,7 @@
     <Content Include="Assets\icons\neige_201110.gif" />
     <Content Include="Assets\icons\nne.png" />
     <Content Include="Assets\icons\nno.png" />
+    <Content Include="Assets\icons\no.png" />
     <Content Include="Assets\icons\nuageux.gif" />
     <Content Include="Assets\icons\o.png" />
     <Content Include="Assets\icons\ono.png" />
