Correction changement meteociel

--- a/MeteoSkyWP/MeteoSkyWP.csproj
+++ b/MeteoSkyWP/MeteoSkyWP.csproj
@@ -158,6 +158,7 @@
     <Content Include="Assets\icons\cb.gif" />
     <Content Include="Assets\icons\e.png" />
     <Content Include="Assets\icons\ene.png" />
+    <Content Include="Assets\icons\ese.png" />
     <Content Include="Assets\icons\grele.gif" />
     <Content Include="Assets\icons\mitige.gif" />
     <Content Include="Assets\icons\n.png" />
